--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 JWT_SECRET="dfjldhddkjsbkdbfwgbewkvdkvdslv"
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/BoldSpark?writeConcern=majority
+MONGO_URI=mongodb+srv://sakthivelm:mLf2sBPeSmb0F6Cx@cluster0.trge1.mongodb.net/BoldSpark
 
 
